--- a/templates/index.html
+++ b/templates/index.html
@@ -41,13 +41,15 @@
             <form>
      </center>
 
-
+     {% if data.country_code %}
     <div class="weather-card">
-        <h2>City: Name</h2>
-        <p>Temperature: 25°C</p>
-        <p>Condition: Sunny</p>
-        <p>Pressure: Pressure</p>
-        <p>Humidity: Humidity</p>
+        <h2>City: {{data.country_code}}</h2>
+        <p>Temperature: {{data.temp}}</p>
+        <p>coordinate: {{data.coordinate}}</p>
+        <p>Condition: {{data.description}}</p>
+        <p>Pressure: {{data.pressure}}</p>
+        <p>Humidity: {{data.humidity}}</p>
     </div>
+    {% endif %}
 </body>
 </html>
